# gps-navigation

./: .gitignore  README.md  odom_lsq_matching.py
compass/: CMakeLists.txt  README.md  nodelets.xml  package.xml
compass/data/magnetic/: README.md  wmm2015v2.wmm  wmm2015v2.wmm.cof
compass/include/compass/: magnetometer_compass_nodelet.h  transform_imu.h
compass/nodes/: visualize_azimuth
compass/src/: magnetometer_compass_node.cpp  magnetometer_compass_nodelet.cpp
compass_msgs/: CMakeLists.txt  README.md  package.xml
compass_msgs/msg/: Azimuth.msg
gps_to_path/: CMakeLists.txt  README.md  package.xml
gps_to_path/data/: .gitignore  0720_CH_around_sports_areal.gpx  0720_CH_building_block_circle.gpx  0720_CH_building_block_zigzag.gpx  0720_CH_forest_long_circle.gpx  0720_CH_trial.gpx  CH-forest-north_medium_circle.gpx  CH-forest-south_medium_circle.gpx  cimicky_asphalt.gpx  kn_aerial.gpx  kn_budova.gpx  kn_g.gpx  rudna_south_west.gpx  unhost_base_ex_north_short.gpx  unhost_base_in_west_short.gpx  unhost_ex_north_long.gpx  unhost_final_demo_husky_west.gpx  unhost_final_demo_road_reversed.gpx  unhost_final_demo_spot_east.gpx  unhost_final_demo_spot_west.gpx  unhost_test.gpx  unhost_west_ex_long_field.gpx  unhost_west_in_gaspipe_short.gpx  unhost_west_in_road_near_field_downward.gpx  unhost_west_in_road_near_football_field.gpx  waypoints.csv  waypoints.gpx  waypoints_triangle.csv
gps_to_path/data/old/: 0630cimicky.gpx  0720_CH_forest_footway.gpx  0720_CH_tradr.gpx  CH-building_block-inside_medium_circle.gpx  CH-building_block-long_circle.gpx  CH-forest-north_short_circle.gpx  CH-forest-north_short_circle_debug.gpx  CH-forest-south_short_circle.gpx  cimicky_easy.gpx  cimicky_small.gpx  coords.gpx  e228_hallway.gpx  kn.gpx  kn2.gpx  kn_ground_truth.gpx  kn_lavicky.gpx  kn_short.gpx  rudna_east.gpx  rudna_north_west.gpx  rudna_south_east.gpx  unhost_base_ex_short_lap.gpx  unhost_base_ex_short_osmicka.gpx  unhost_base_ex_west_short.gpx  unhost_base_in_west_medium.gpx  unhost_north_ex_gaspipe_fence.gpx  unhost_north_ex_gaspipe_road.gpx  unhost_north_ex_long_tree_path.gpx  unhost_spot.gpx  unhost_spot_2  unhost_spot_2.gpx  unhost_west_ex_through_field.gpx  unhost_west_in_gaspipe_long.gpx  unhost_west_in_long_houses.gpx  waypoints.csv
gps_to_path/data/original_demo_paths/: unhost_final_demo_husky_east.gpx
gps_to_path/launch/: bag_path_planner_igraph.launch  e228_fake_gps.launch  fake.launch  fake_path_planner_igraph.launch  follower.launch  gps.launch  gps_drivers.launch  gps_pcd.launch  gps_pcd.launch.save  gps_working.launch  joy_waypoint_control.launch  osm.launch  path_planner.launch  path_planner_igraph.launch  reach.launch  visualization.launch
gps_to_path/launch/old/: 50_gps.launch  bag_path_planner.launch  etf.launch  fake_gps.launch  fake_path_planner.launch  gps_old.launch  llh_gps.launch  navsat_transform_node_gps.launch  path_planner.launch
gps_to_path/msg/: MagShift.msg  NavSatDetailedStatus.msg  NavSatFixQuality.msg  Wgs.msg
gps_to_path/nodes/: .waypoints_to_path.swp  autonomy_override_vis  azimuth_to_mag_field  fake_gps  fake_mag  fake_odom  fake_path  fake_waypoints_fn  fix_to_utm  fix_to_utm_pose  get_mag_shift  gps_to_path  gps_to_pcd  gps_to_pcd_utm_frame  gpx_to_waypoints.py  gpx_visualize  graph_search_params.py  joy_waypoint_control  limit_fix_accuracy  llh_publisher  llh_to_fix  mag_field_to_azimuth  nav_sat_fix_filter  osm_analysis.py  osm_analysis_igraph.py  osm_pickler  osm_to_pcd  osm_to_pcd_0809  osm_to_pcd_for_path_planner  osm_types.py  osm_visualize  osm_visualizer  path_coverage  path_planner  path_planner_igraph  path_planner_igraph_bag  path_planner_igraph_working_1007  points_to_graph_points.py  road_crossing_consts.py  road_curvature.py  (+13 more)
gps_to_path/nodes/old/: gps_to_path  gps_to_path_0609  gps_to_path_0610  gps_to_path_0816  gps_to_path_old  gps_to_path_old_-1  gps_to_path_old_-2  llh_serial_to_fix  mag_field_to_azimuth_old  path_planner_with_filled_pcd  path_planner_without_pcd  path_planner_working_0819  utm_odom_tf_old  utm_odom_tf_old_-1
gps_to_path/parameters/: anti_obstacle_tags.csv  barrier_tags.csv  not_barrier_tags.csv
gps_to_path/params/: ekf.yaml
kmz_to_waypoints/: 001_p(1).kmz  001_p.kmz  README.md  background_map.py  kmz_to_waypoints.py  lasso_imshow.py  lasso_imshow_select.py
kmz_to_waypoints/gpx/: unhost_final_demo_husky_west.gpx  unhost_final_demo_road_reversed.gpx
magnetometer_compass/: CMakeLists.txt  LICENSE  README.md  nodelets.xml  package.xml
magnetometer_compass/include/magnetometer_compass/: compass_nodelet.h
magnetometer_compass/src/: compass_node.cpp  compass_nodelet.cpp
odom_fix_matching/: README.md  background_map.py  match_multiple.py  match_single.py  odom_fix_matching.py  requirements.txt
osm_path/: README.md  requirements.txt
osm_path/gpx/: cimicky.gpx  cimicky2.gpx  cimicky3.gpx  testKN.gpx
osm_path/misc/: unclassified_tags.txt
osm_path/parameters/: anti_barrier_tags.csv  obstacle_tags.csv
osm_path/path/: asdasd.gpx  path.gpx
osm_path/scripts/: Road_crossing_algorithm.tex  TPI_classification.odg  coords_to_waypoints.py  graph_search_params.py  main.py  osm_analysis.py  points_to_graph_points.py  road_crossing_consts.py  (+4 more)
osm_path_planner/: CMakeLists.txt  README.md  package.xml
osm_path_planner/data/: unhost_final_demo_drony.gpx  unhost_final_demo_drony_extended.gpx  unhost_final_demo_husky_east_trimmed.gpx  unhost_final_demo_spot_east_trimmed.gpx  unhost_final_demo_spot_west_trimmed.gpx
osm_path_planner/launch/: bag_path_planner_igraph.launch  follower.launch  joy_waypoint_control.launch  path_planner_igraph.launch  visualization.launch
osm_path_planner/msg/: WgsArray.msg
osm_path_planner/nodes/: autonomy_override_vis  gps_to_path  gpx_to_waypoints.py  graph_search_params.py  joy_waypoint_control  osm_analysis_igraph.py  osm_pickler  osm_visualize  osm_visualizer  path_coverage  path_planner_igraph  path_planner_igraph_bag  points_to_graph_points.py  road_detection.py  sjtsk_to_utm.py  waypoints_to_path_simple
osm_path_planner/parameters/: not_obstacle_tags.csv
(+4 files in other folders)
