<?xml version="1.0"?>
<package format="3">
  <name>gps_to_path</name>
  <version>0.0.0</version>
  <description>The gps_to_path package</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <author email="herolada@fel.cvut.cz">Adam Herold</author> 
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>cras_py_common</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>http_relay</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend condition="$ROS_DISTRO != noetic">python-geopy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-gpxpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-overpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-shapely</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-utm-pip</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-numpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-OSMPythonTools</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-igraph</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-tqdm</exec_depend>

  <exec_depend condition="$ROS_DISTRO == noetic">python3-geopy</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-gpxpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-overpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-shapely</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-utm</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-OSMPythonTools</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-igraph</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-tqdm</exec_depend>
</package>
